[project]
name = "jetstream-ingestion"
version = "0.1.0"
description = "A Python application for ingesting Bluesky's Jetstream API data and writing it to DuckDB"
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }

dependencies = [
    "websockets>=12.0",
    "duckdb>=0.9.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.3",
    "pytest-asyncio>=0.21.1",
]

[project.scripts]
jetstream-ingest = "jetstream_ingestion.ingestor:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
dev-dependencies = [
    "pytest>=7.4.3",
    "pytest-asyncio>=0.21.1",
]
